# libgeommodel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: GeomModelConfig.cmake.in  geommodelConfig.cmake.in
include/geom_model/: abstract_curve.h  abstract_surface.h  axis.h  bspline_curve.h  bspline_surface.h  circle.h  conical_surface.h  curves.h  cylindrical_surface.h  dot.h  edge.h  ellipse.h  face.h  geom_util.h  hyperbola.h  line.h  line_segment.h  mat.h  oriented_edge.h  parabola.h  parametric_point.h  plane.h  point.h  shell.h  spherical_surface.h  toroidal_surface.h  vec.h
include/gm/: abstract_curve.h  abstract_curve.hpp  abstract_surface.h  abstract_surface.hpp  axis.h  axis.hpp  bspline_curve.h  bspline_curve.hpp  bspline_surface.h  bspline_surface.hpp  circle.h  circle.hpp  compare.h  compare.hpp  conical_surface.h  conical_surface.hpp  curves.h  curves.hpp  cylindrical_surface.h  cylindrical_surface.hpp  debug.h  debug.hpp  dot.h  dot.hpp  edge.h  edge.hpp  ellipse.h  ellipse.hpp  face.h  face.hpp  hyperbola.h  hyperbola.hpp  line.h  line.hpp  mat.h  mat.hpp  misc.hpp  oriented_edge.h  oriented_edge.hpp  parabola.h  (+17 more)
src/bspline/: array_operators.h  basic_bspline_curve.h  basic_bspline_curve.hpp  basic_bspline_surface.h  basic_bspline_surface.hpp  bspline_curve.cpp  bspline_curve_impl.cpp  bspline_curve_impl.h  bspline_curve_impl.hpp  bspline_surface.cpp  bspline_surface_impl.cpp  bspline_surface_impl.h  bspline_surface_impl.hpp  cox_de_boor.h  cox_de_boor.hpp  curve_projector.cpp  curve_projector.h  curve_projector.hpp  distance_curve.cpp  distance_curve.h  distance_curve.hpp  distance_surface.cpp  distance_surface.h  distance_surface.hpp  surface_projector.cpp  surface_projector.h  surface_projector.hpp  util.cpp  util.hpp  wpoint.cpp  wpoint.h  wpoint.hpp
src/geom/: abstract_curve.cpp  abstract_surface.cpp  bspline_curve.cpp  bspline_curve_impl.cpp  bspline_curve_impl.h  bspline_surface.cpp  bspline_surface_impl.cpp  bspline_surface_impl.h  bspline_surface_projector.cpp  bspline_surface_projector.h  circle.cpp  conical_surface.cpp  cox_de_boor.cpp  cox_de_boor.h  curve_projector.cpp  curve_projector.h  cylindrical_surface.cpp  ellipse.cpp  hyperbola.cpp  line.cpp  parabola.cpp  plane.cpp  spherical_surface.cpp  toroidal_surface.cpp
src/primitive/: axis.cpp  mat.cpp  parametric_point.cpp  point.cpp  surf_point.cpp  vec.cpp  vec_impl.cpp  vec_impl.h  wpoint.h
src/topology/: edge.cpp  face.cpp  line_segment.cpp  oriented_edge.cpp  shell.cpp
src/util/: compare.cpp  cyclic_iterator.h  cyclic_iterator.hpp  debug.h  debug.hpp  geom_util.cpp  itertools.h  itertools.hpp  math.cpp  math.h  math.hpp  misc.cpp  std_defines.h  std_defines.hpp  to_string.cpp  to_string.hpp  util.h  util.hpp  vector_view.h  vector_view.hpp
test/: CMakeLists.txt
test/src/: test_bspline.cpp  test_bspline_impl.cpp  test_curve.cpp  test_primitive.cpp  test_surface.cpp
tests/: CMakeLists.txt
tests/src/: test_bspline.cpp  test_bspline_impl.cpp  test_curve.cpp  test_primitive.cpp  test_surface.cpp
